--- a/readerbench/build.gradle
+++ b/readerbench/build.gradle
@@ -33,6 +33,9 @@ dependencies {
 	implementation group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.14'
 	// https://mvnrepository.com/artifact/com.google.code.gson/gson
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+    // https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path
+    implementation group: 'com.jayway.jsonpath', name: 'json-path', version: '2.5.0'
+
 	
 }
 
