Assessemnt added. Processing Database Connection

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,23 @@ archiva_credentials.xml
 
 # Ignore Gradle build output directory
 build
+readerbench/hs_err*
+readerbench/hs_err_pid3880.log
+readerbench/hs_err_pid9640.log
+readerbench/hs_err_pid10256.log
+readerbench/hs_err_pid10468.log
+readerbench/hs_err_pid11020.log
+readerbench/hs_err_pid11556.log
+readerbench/hs_err_pid12048.log
+readerbench/hs_err_pid12792.log
+readerbench/hs_err_pid13364.log
+readerbench/hs_err_pid13756.log
+readerbench/hs_err_pid14224.log
+readerbench/hs_err_pid14976.log
+readerbench/hs_err_pid15868.log
+readerbench/hs_err_pid16288.log
+readerbench/hs_err_pid17044.log
+readerbench/hs_err_pid17764.log
+readerbench/hs_err_pid18632.log
+readerbench/hs_err_pid18888.log
+readerbench/hs_err_pid20368.log
