--- a/etc/i5.las2peer.services.readerbenchService.ReaderbenchService.properties
+++ b/etc/i5.las2peer.services.readerbenchService.ReaderbenchService.properties
@@ -1,5 +1,6 @@
-databaseUser = root
-databasePassword = 
-databaseName = LAS2PEERMON
-databaseHost = 127.0.0.1
-databasePort = 3306
+databaseUser=root
+databasePassword=usser
+databaseName=LAS2PEERMON
+databaseHost=127.0.0.1
+databasePort=3306
+readerbenchEndpointss="rb-controller.ma-zeufack:6006"
