--- a/readerbench/build.gradle
+++ b/readerbench/build.gradle
@@ -4,6 +4,11 @@ plugins {
     id 'eclipse'
     id 'jacoco'
 }
+/**
+ * 1st approach: Setting encoding during compilation in Java and Test classes
+ */
+compileJava.options.encoding = "UTF-8"
+compileTestJava.options.encoding = "UTF-8"
 
 repositories {
     // Use JCenter for resolving dependencies.
@@ -35,6 +40,9 @@ dependencies {
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     // https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path
     implementation group: 'com.jayway.jsonpath', name: 'json-path', version: '2.5.0'
+    // https://mvnrepository.com/artifact/org.jsoup/jsoup
+    implementation group: 'org.jsoup', name: 'jsoup', version: '1.13.1'
+
 
 	
 }
