--- a/readerbench/build.gradle
+++ b/readerbench/build.gradle
@@ -42,6 +42,12 @@ dependencies {
     implementation group: 'com.jayway.jsonpath', name: 'json-path', version: '2.5.0'
     // https://mvnrepository.com/artifact/org.jsoup/jsoup
     implementation group: 'org.jsoup', name: 'jsoup', version: '1.13.1'
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2
+    implementation group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.8.0'
+    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.25'
+
+
 
 
 	
