Save before specific changes

--- a/etc/i5.las2peer.services.readerbenchService.ReaderbenchService.properties
+++ b/etc/i5.las2peer.services.readerbenchService.ReaderbenchService.properties
@@ -3,4 +3,5 @@ databasePassword=user
 databaseName=LAS2PEERMON
 databaseHost= "mysql-service"
 databasePort=3306
-readerbenchEndpointss="rb-controller.ma-zeufack:6006"
+readerbenchEndpoint="rb-controller.ma-zeufack:6006"
+l2pEndpoint="http://137.226.232.75:32445/"
