--- a/readerbench/build.gradle
+++ b/readerbench/build.gradle
@@ -46,6 +46,15 @@ dependencies {
     implementation group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.8.0'
     // https://mvnrepository.com/artifact/mysql/mysql-connector-java
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.25'
+    // https://mvnrepository.com/artifact/com.itextpdf/itextpdf
+    implementation group: 'com.itextpdf', name: 'itextpdf', version: '5.0.6'
+    // https://mvnrepository.com/artifact/guru.nidi/graphviz-java
+    implementation group: 'guru.nidi', name: 'graphviz-java', version: '0.16.1'
+    // https://mvnrepository.com/artifact/com.eclipsesource.j2v8/j2v8_linux_x86_64
+    implementation group: 'com.eclipsesource.j2v8', name: 'j2v8_linux_x86_64', version: '4.6.0'
+
+
+
 
 
 
